# searchCT

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: README.md  api.py  config.py  deps.py  logger.py  main.py  middleware.py  query_vector_db.py  settings.py
tests/: test_api.py  test_query_vector.py
